--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Cpp17)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cpp Milk.cpp Milk.h)
+set(SOURCE_FILES src/main.cpp Milk/Milk.cpp Milk/Milk.h)
 add_executable(Cpp17 ${SOURCE_FILES})
